--- a/foundations/01-css-methods/styles01.css
+++ b/foundations/01-css-methods/styles01.css
@@ -1,7 +1,8 @@
 /* styles.css */
 div {
-    background: red;
+    background-color: red;
     color : white;
     font-size: 32px;
+    text-align: center;
     font-weight: bold;
 }
