--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -18,6 +18,8 @@ body {
 
 .button {
   font-size: 20px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 
 #confirm-button {
@@ -26,22 +28,17 @@ body {
   font-weight: bold;
 } 
 
-#cancel-button {
-  background-color: rgb(255, 255, 255);
+div.text {
   color: rgb(0, 0, 0);
+  font-weight: 100;
+  font-size: 22px;
 }
 
-.text,
-.child {
+div .child {
   color: rgb(0, 0, 0);
-}
-
-.text .child{
   font-weight: 800;
   font-size: 14px;
 }
 
-.text {
-  font-size: 22px;
-  font-weight: 100;
-}
+
+
